--- a/Headings and Paragraph Tags.html
+++ b/Headings and Paragraph Tags.html
@@ -4,12 +4,12 @@
         <!-- Used by the Keyboard -->
         <meta charset="utf-8">
 
-        <title>Splash Page, Learning HTML</title>
+        <title>Headings and Paragraphs</title>
 
         <!-- Used by Browser or Google Search -->
         <meta name="author" content="Mark Mercer">
         <meta name="description" content="Learning HTML by building a simple website">
-        <meta name="keywords" content="boilerplate, starter code, HTML, learning">
+        <meta name="keywords" content="boilerplate, starter code, HTML, learning, Headings, Paragraphs">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Content give value for name or http-equiv attribute, text entry in string or array string -->
 
@@ -30,25 +30,32 @@
     </head>
 
     <body>
-        <header><h1 style="font-size:4vw">Learning HTML</h1></header>
-        <nav>
-            <Header><h1 style="font-size:3vw">Navigation</h1></Header>
-            <Section><h1 style="font-size:2vw">Page Hyperlinks</h1>
-                <ul style="list-style-type:square; font-size:1vw">
-                   <li> Meta Data Example: <a href="childPages/Meta Data Example.html"  target="_blank">Click Here and then open in WYSISWG to see the meta data</a>
-                   <li> Footer Blockquote Example: <a href="childPages/Footer Blockquote Example.html"  target="_blank">Click Here</a>
-                   <li> Template Exemplar: <a href="childPages/childTemplate.html"  target="_blank">Click Here</a>
-                   <li> Headings and Paragraph Tags: <a href="childPages/Headings and Paragraph Tags.html"  target="_blank">Click Here</a>
-                   <li> Subscript and Superscript Tags: <a href="childPages/Subscript and Superscript Tags.html"  target="_blank">Click Here</a>
-                   <li> Image Lesson: <a href="childPages/Image Lesson.html"  target="_blank">Click Here</a>
-                   <li> Laying out DIVs (using HTML Boilerplate): <a href="childPages/Laying out DIVs.html"  target="_blank">Click Here</a>
-                   <li> What this index page might look like with Flexbox: <a href="childPages/Flexbox.html"  target="_blank">Click Here</a>
-                </ul>
-            </Section>
-        </nav>
-        <aside></aside>
-        <main>Summarize what you have learned in the lessons here, including research.</main>
-        <section></section>
+        <header style="font-size:4vw; text-align: center">
+            <h1>Headings and Paragraphs</h1>
+            <h2>Headings and Paragraphs</h2>
+            <h3>Headings and Paragraphs</h3>
+        </header>
+        <nav></nav>
+        <aside>
+            <header><h1>This is the Aside Space</h1></header>
+            <p>H7 and h8 do not exist.</p>
+        </aside>
+        <main></main>
+        <section>
+            <header><h1>This is the section space.</h1></header> 
+            <article>
+                <header><h1>This is the section-article space.</h1></header>
+                <h1>H1: this is H1 in section-article</h1>
+                <h2>H2: this is H2 in section-article</h2>
+                <h3>H3: this is H3 in section-article</h3>
+                <h4>H4: this is H4 in section-article</h4>
+                <h5>H5: this is H5 in section-article</h5>
+                <h6>H6: this is H6 in section-article</h6>
+                <h7>H7: this is H7 in section-article</h7>
+                <h8>H8: this is H8 in section-article</h8>
+                <p>P: This is a paragraph-tag for comparison.</p>
+            </article>
+        </section>
         <article></article>
         <footer></footer>
     </body>
