--- a/Image Lesson.html
+++ b/Image Lesson.html
@@ -4,12 +4,12 @@
         <!-- Used by the Keyboard -->
         <meta charset="utf-8">
 
-        <title>Splash Page, Learning HTML</title>
+        <title>Image</title>
 
         <!-- Used by Browser or Google Search -->
         <meta name="author" content="Mark Mercer">
         <meta name="description" content="Learning HTML by building a simple website">
-        <meta name="keywords" content="boilerplate, starter code, HTML, learning">
+        <meta name="keywords" content="boilerplate, starter code, HTML, learning, Image">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Content give value for name or http-equiv attribute, text entry in string or array string -->
 
@@ -30,25 +30,30 @@
     </head>
 
     <body>
-        <header><h1 style="font-size:4vw">Learning HTML</h1></header>
-        <nav>
-            <Header><h1 style="font-size:3vw">Navigation</h1></Header>
-            <Section><h1 style="font-size:2vw">Page Hyperlinks</h1>
-                <ul style="list-style-type:square; font-size:1vw">
-                   <li> Meta Data Example: <a href="childPages/Meta Data Example.html"  target="_blank">Click Here and then open in WYSISWG to see the meta data</a>
-                   <li> Footer Blockquote Example: <a href="childPages/Footer Blockquote Example.html"  target="_blank">Click Here</a>
-                   <li> Template Exemplar: <a href="childPages/childTemplate.html"  target="_blank">Click Here</a>
-                   <li> Headings and Paragraph Tags: <a href="childPages/Headings and Paragraph Tags.html"  target="_blank">Click Here</a>
-                   <li> Subscript and Superscript Tags: <a href="childPages/Subscript and Superscript Tags.html"  target="_blank">Click Here</a>
-                   <li> Image Lesson: <a href="childPages/Image Lesson.html"  target="_blank">Click Here</a>
-                   <li> Laying out DIVs (using HTML Boilerplate): <a href="childPages/Laying out DIVs.html"  target="_blank">Click Here</a>
-                   <li> What this index page might look like with Flexbox: <a href="childPages/Flexbox.html"  target="_blank">Click Here</a>
-                </ul>
-            </Section>
-        </nav>
+        <header><h1>Image Lesson</h1></header>
+        <nav></nav>
         <aside></aside>
-        <main>Summarize what you have learned in the lessons here, including research.</main>
-        <section></section>
+        <main></main>
+        <section>
+            <h3>Steps in building an Image</h3>
+            <ul>
+                <li> Pick an Image (careful of the file extension in the URL)
+                <li> Record URL, cite it, comment for date access, and record original dimensions
+                <li> Use blockquote and comment as appropriate
+                <li> Use img-tag with attributes src, alt, title, and style with width-height
+            </ul>
+        </section>
+        <section>
+            <h3>Example Image</h3>
+            <br><!-- codes one space, like pressing enter -->
+            <!-- <img> is self closing -->
+            <blockquote cite="https://previews.123rf.com/images/trimbaldi/trimbaldi1309/trimbaldi130900007/23089796-wow-in-pop-art.jpg">
+                <!-- Date Accessed 20220928 -->
+            </blockquote>
+            <img src="https://previews.123rf.com/images/trimbaldi/trimbaldi1309/trimbaldi130900007/23089796-wow-in-pop-art.jpg" alt="..\Images\23089796-wow-in-pop-art.jpg" title="WOW! Mr. Mercer" style="width:25%;height:auto">
+            <br><br><br>
+            <img src alt title="WOW! Mr. Mercer" style="width:100%;height:auto">
+        </section>
         <article></article>
         <footer></footer>
     </body>
