--- a/Subscript and Superscript Tags.html
+++ b/Subscript and Superscript Tags.html
@@ -4,12 +4,12 @@
         <!-- Used by the Keyboard -->
         <meta charset="utf-8">
 
-        <title>Splash Page, Learning HTML</title>
+        <title>Sub & Superscripts</title>
 
         <!-- Used by Browser or Google Search -->
         <meta name="author" content="Mark Mercer">
         <meta name="description" content="Learning HTML by building a simple website">
-        <meta name="keywords" content="boilerplate, starter code, HTML, learning">
+        <meta name="keywords" content="boilerplate, starter code, HTML, learning, subscripts, superscripts">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Content give value for name or http-equiv attribute, text entry in string or array string -->
 
@@ -30,28 +30,37 @@
     </head>
 
     <body>
-        <header><h1 style="font-size:4vw">Learning HTML</h1></header>
-        <nav>
-            <Header><h1 style="font-size:3vw">Navigation</h1></Header>
-            <Section><h1 style="font-size:2vw">Page Hyperlinks</h1>
-                <ul style="list-style-type:square; font-size:1vw">
-                   <li> Meta Data Example: <a href="childPages/Meta Data Example.html"  target="_blank">Click Here and then open in WYSISWG to see the meta data</a>
-                   <li> Footer Blockquote Example: <a href="childPages/Footer Blockquote Example.html"  target="_blank">Click Here</a>
-                   <li> Template Exemplar: <a href="childPages/childTemplate.html"  target="_blank">Click Here</a>
-                   <li> Headings and Paragraph Tags: <a href="childPages/Headings and Paragraph Tags.html"  target="_blank">Click Here</a>
-                   <li> Subscript and Superscript Tags: <a href="childPages/Subscript and Superscript Tags.html"  target="_blank">Click Here</a>
-                   <li> Image Lesson: <a href="childPages/Image Lesson.html"  target="_blank">Click Here</a>
-                   <li> Laying out DIVs (using HTML Boilerplate): <a href="childPages/Laying out DIVs.html"  target="_blank">Click Here</a>
-                   <li> What this index page might look like with Flexbox: <a href="childPages/Flexbox.html"  target="_blank">Click Here</a>
-                </ul>
-            </Section>
-        </nav>
+        <header>
+            <h1 style="font-size:4vw">
+                Viewing Subscript and Superscript Tags using Viewport
+            </h1>
+        </header>
+        <nav></nav>
         <aside></aside>
-        <main>Summarize what you have learned in the lessons here, including research.</main>
-        <section></section>
-        <article></article>
-        <footer></footer>
-    </body>
+        <main>
+            <h1 style="font-size:4vw">
+                This is the Main Section
+            </h1>
+            <section>
+                <h1 style="font-size:3vw">
+                    An example sentence with all the letters of the alphabet
+                </h1>
+                <article>
+                    <h1 style="font-size:2vw">
+                        The quick brown fox 
+                        <sup>
+                            jumps
+                        </sup> 
+                        over the 
+                        <sub>
+                            lazy
+                        </sub> 
+                        dog.
+                    </h1>
+                </article>
+            </section>
+        </main>
+        <footer>
 
     <footer>
         <Blockquote cite="https://www.brainyquote.com/quotes/mitch_kapor_163583">
