Update Laying out DIVs.html

--- a/Laying out DIVs.html
+++ b/Laying out DIVs.html
@@ -39,7 +39,7 @@
 
     <body>
         <header><div><h1>laying out the DIVs</h1></div></header>
-        <nav><div style="border: t"><h1>>Here is another container, illustrated by DIV</h1></div></nav>
+        <nav><div style="border: t"><h1>Here is another container, illustrated by DIV</h1></div></nav>
         <aside></aside>
         <main>And the MAIN countainer illustrated by DIV</main>
         <section></section>
