--- a/Flexbox.html
+++ b/Flexbox.html
@@ -24,14 +24,22 @@
         <!-- meta http-equiv="content-type" content="text/html; charset=UTF-8" -->
         <!-- Already specified in the charset above-->
         
-        <style> 
-         *
-         div {}
-         .header {}
-         .menu {}
-         .main {}
-         .aside {} 
-         .footer {}
+           <style> 
+                * {
+                    box-sizing: border-box;
+                    font: size 2vw;
+                }
+
+               div {border: thin dotted red}
+
+                .header {
+                    border:1px solid green;
+                    padding: 15 px;
+               }
+           .menu {}
+           .main {}
+           .aside {} 
+           .footer {}
         </style>
 
 
